--- a/AutoUpdater.NET/AutoUpdater.NET.csproj
+++ b/AutoUpdater.NET/AutoUpdater.NET.csproj
@@ -8,23 +8,21 @@
         <UseWpf>true</UseWpf>
         <RootNamespace>AutoUpdaterDotNET</RootNamespace>
         <AssemblyTitle>AutoUpdater.NET</AssemblyTitle>
-        <Company>RBSoft</Company>
-        <Product>AutoUpdater.NET</Product>
+        <Company>RBSoft &amp; Cauca</Company>
+        <Product>Cauca.AutoUpdater</Product>
         <Copyright>Copyright © 2012-2021 RBSoft</Copyright>
-        <Version>1.7.0.0</Version>
-        <AssemblyVersion>1.7.0.0</AssemblyVersion>
-        <FileVersion>1.7.0.0</FileVersion>
-        <SignAssembly>true</SignAssembly>
-        <AssemblyOriginatorKeyFile>AutoUpdater.NET.snk</AssemblyOriginatorKeyFile>
+        <Version>1.7.1-beta1</Version>
+        <AssemblyVersion>1.7.1.0</AssemblyVersion>
+        <FileVersion>1.7.1.0</FileVersion>
         <NeutralLanguage>en</NeutralLanguage>
-        <PackageId>Autoupdater.NET.Official</PackageId>
+        <PackageId>Cauca.AutoUpdater</PackageId>
         <IncludeSymbols>true</IncludeSymbols>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <PackageVersion>1.7.0.0</PackageVersion>
+        <PackageVersion>1.7.1</PackageVersion>
         <Title>AutoUpdater.NET</Title>
         <Authors>rbsoft</Authors>
-        <Description>AutoUpdater.NET is a class library that allows .NET developers to easily add auto update functionality to their classic desktop application projects.</Description>
-        <PackageProjectUrl>https://github.com/ravibpatel/AutoUpdater.NET</PackageProjectUrl>
+        <Description>Fully based on AutoUpdater.Net</Description>
+        <PackageProjectUrl>https://github.com/iamkinetic/AutoUpdater.NET</PackageProjectUrl>
         <PackageTags>autoupdate updater c# vb wpf winforms</PackageTags>
         <PackageReleaseNotes>https://github.com/ravibpatel/AutoUpdater.NET/releases</PackageReleaseNotes>
         <PackageOutputPath>build</PackageOutputPath>
@@ -51,5 +49,8 @@
         <PackageReference Include="Resource.Embedder" Version="1.2.8">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="semver" Version="2.0.6" />
     </ItemGroup>
 </Project>
